--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
+*.txt.gz filter=lfs diff=lfs merge=lfs -text
